Fix: Small square corner appearing behind the rounded corner on top of dialogs

--- a/openxava/src/main/resources/META-INF/resources/xava/style/base.css
+++ b/openxava/src/main/resources/META-INF/resources/xava/style/base.css
@@ -1864,7 +1864,8 @@ td.ox-list-subheader > div {
 .ui-dialog-titlebar {
 	font-size: 1.2em;
 	color: var(--dialog-titlebar-color) !important;
-	background: var(--dialog-titlebar-background) !important;  
+	background: var(--dialog-titlebar-background) !important;
+	border-radius: 24px;  
 }
 
 .ui-dialog-titlebar button {
